--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -6,11 +6,11 @@ authors = ["François Gindraud <francois.gindraud@gmail.com>"]
 description = "Save multi-screen layouts and restore them when needed"
 
 [dependencies]
-anyhow = "^1"
-dirs = "^4" # config dir
-gumdrop = "^0.8" # cmd line parsing
-log = "^0.4"
-simple_logger = "^2"
+anyhow = "1.0"
+dirs = "4.0" # config dir
+gumdrop = "0.8" # cmd line parsing
+log = "0.4"
+simple_logger = "2"
 
 # xcb backend, defines a feature
-xcb = { version = "^1", features = ["randr"], optional = true }
+xcb = { version = "1.1", features = ["randr"], optional = true }
