Move to clap for CLI
clap v3 has been optimized and now has a similar interface as gumdrop.
It also supports having a long about text (todo).
More likely to be supported in the future.

--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -8,7 +8,7 @@ description = "Save multi-screen layouts and restore them when needed"
 [dependencies]
 anyhow = "1.0"
 dirs = "4.0" # config dir
-gumdrop = "0.8" # cmd line parsing
+clap = { version = "3.1", features = ["derive"] } # cmd line parsing
 log = "0.4"
 simple_logger = "2"
 
