Readme / cargo / license

--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 authors = ["François Gindraud <francois.gindraud@gmail.com>"]
 description = "Save multi-screen layouts and restore them when needed"
+repository = "https://github.com/lereldarion/slam"
+license = "MIT"
+keywords = ["screen", "daemon", "x11"]
 
 [dependencies]
 anyhow = "1.0"
