--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -14,6 +14,14 @@ dirs = "4.0" # config dir
 clap = { version = "3.1", features = ["derive"] } # cmd line parsing
 log = "0.4"
 simple_logger = "2"
+good_lp = "1.3" # ilp library for Layout computations
 
-# xcb backend, defines a feature
+# xcb backend: feature "xcb"
 xcb = { version = "1.1", features = ["randr"], optional = true }
+
+
+[dev-dependencies]
+raqote = "0.8.0" # for layout example
+
+[[example]]
+name = "layout"
