--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -14,7 +14,7 @@ dirs = "4.0" # config dir
 clap = { version = "3.1", features = ["derive"] } # cmd line parsing
 log = "0.4"
 simple_logger = "2"
-good_lp = "1.3" # ilp library for Layout computations
+osqp = "0.6.2" # quadratic solver for layout inference
 
 # xcb backend: feature "xcb"
 xcb = { version = "1.1", features = ["randr"], optional = true }
