layout error as bitflags, serde experiments
Move from enum to an "error" bitflag for layout status.
This enables reporting of multiple type of problems in logs.
Semantics of the enum were wonky to begin with...

Enable serialization by adding lots of derive.
Generated json seems very ok.
Deserialize should validate layout structs in my opinion, just to detect database corruption or similar...

--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -10,11 +10,19 @@ keywords = ["screen", "daemon", "x11"]
 
 [dependencies]
 anyhow = "1.0"
-dirs = "4.0" # config dir
 clap = { version = "3.1", features = ["derive"] } # cmd line parsing
+bitflags = "1.3"
+
+# Logging stuff
 log = "0.4"
 simple_logger = "2"
+
 osqp = "0.6.2" # quadratic solver for layout inference
+
+# Database related
+dirs = "4.0" # config dir
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 
 # xcb backend: feature "xcb"
 xcb = { version = "1.1", features = ["randr"], optional = true }
